--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
             <p><strong>Nombre:</strong> Petrona Duarte</p>
             <p><strong>DUI:</strong> 01700405-7</p>
             <p><strong>Fecha de Nacimiento:</strong> 03/08/1949</p>
-            <p><strong>Dirección:</strong> Col. Zacamil, Com. 13 de enero, Pje. 2, Pol. D, Casa # 24, Mejicanos, San Salvador</p>
+            <p><strong>Dirección:</strong> Col. Zacamil, Com. 13 de enero, Pje. 2, Pol. D, Casa # 24, Mejicanos, San Salvador.</p>
         </div>
     </div>
     <div class="card mt-3">
         <div class="card-body">
             <h5>Contactos de Emergencia</h5>
             <ul>
-                <li><strong>Daniel Balmore Hernández Duarte:</strong> +503 7150-7095</li><li><strong>Noé Duarte:</strong> +503 7100-0000</li>            </ul>
+                <li><strong>Daniel Balmore Hernández Duarte:</strong> +503 7150-7095</li>
+                <li><strong>Noé Duarte:</strong> +503 7859-6964</li>
+            </ul>
         </div>
     </div>
     <div class="card mt-3">
@@ -50,7 +52,11 @@
         <div class="card-body">
             <h5>Medicamentos</h5>
             <ul>
-                <li><strong>Propanolol</strong> - 1 vez al día - 50mg</li><li><strong>Metformina</strong> - 1 vez al día - 850mg</li><li><strong>Aspirina</strong> - 1 vez al día - 100mg</li>            </ul>
+                <li><strong>Propanolol</strong> - 1 vez al día - 50mg</li>
+                <li><strong>Metformina</strong> - 1 vez al día - 850mg</li>
+                <li><strong>Atenolol</strong> - 1 vez al día - 100mg</li>
+                <li><strong>Hidrocloriticida</strong> - Mitad 1 vez al día - 100mg</li>
+            </ul>
         </div>
     </div>
     <button class="btn btn-danger mt-3 w-100" onclick="enviarEmergencia()">Botón de Pánico</button>
