--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             <h5>Medicamentos</h5>
             <ul>
                 <li><strong>Propanolol</strong> - 1 vez al día - 50mg</li>
-                <li><strong>Metformina</strong> - 1 vez al día - 850mg</li>
+                <li><strong>Metformina</strong> - 1 vez al día - 50mg</li>
                 <li><strong>Atenolol</strong> - 1 vez al día - 100mg</li>
                 <li><strong>Hidrocloriticida</strong> - Mitad 1 vez al día - 100mg</li>
             </ul>
         </div>
     </div>
-    <button class="btn btn-danger mt-3 w-100" onclick="enviarEmergencia()">Botón de Pánico</button>
+    <button class="btn btn-success mt-3 w-100" onclick="enviarEmergencia()">Enviar Ubicación</button>
+    <br />
 </body>
 </html>
