--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="card-body">
             <h5>Contactos de Emergencia</h5>
             <ul>
-                <li><strong>Daniel Balmore Hernández Duarte:</strong> +503 7150-7095</li>
-                <li><strong>Noé Duarte:</strong> +503 7859-6964</li>
+                <li><strong>Daniel Balmore Duarte:</strong><br />(+503) 7150-7095</li>
+                <li><strong>Noé Duarte:</strong><br />(+503) 7859-6964</li>
             </ul>
         </div>
     </div>
@@ -46,6 +46,7 @@
             <p><strong>Tipo de Sangre:</strong> ORH+</p>
             <p><strong>Alergias:</strong> Ninguna</p>
             <p><strong>Condiciones Médicas:</strong> Hipertensión, Diabetes leve</p>
+			<p><strong>Expediente y controles:</strong> Hospital Nacional Zacamil, Unidad de Salud San Antonio Abad, Unidad de Salud Zacamil.</p>
         </div>
     </div>
     <div class="card mt-3">
@@ -60,6 +61,6 @@
         </div>
     </div>
     <button class="btn btn-success mt-3 w-100" onclick="enviarEmergencia()">Enviar Ubicación</button>
-    <br />
+    <br /><br />
 </body>
 </html>
