--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Información Médica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
-        function enviarEmergencia() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    let lat = position.coords.latitude;
-                    let lon = position.coords.longitude;
-                    let mensaje = 'Emergencia! Ubicación: https://maps.google.com/?q=' + lat + ',' + lon;
-                    let url = 'https://wa.me/?text=' + encodeURIComponent(mensaje);
-                    window.open(url, '_blank');
-                });
-            } else {
-                alert("La geolocalización no está disponible en este dispositivo.");
-            }
+    function enviarEmergencia() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                let lat = position.coords.latitude;
+                let lon = position.coords.longitude;
+                let mensaje = 'Emergencia! Ubicación: https://maps.google.com/?q=' + lat + ',' + lon;
+                let url = 'https://wa.me/50371507095?text=' + encodeURIComponent(mensaje); // Número +50371507095
+                window.open(url, '_blank');
+            });
+        } else {
+            alert("La geolocalización no está disponible en este dispositivo.");
         }
-    </script>
+    }
+</script>
 </head>
 <body class="container mt-4">
     <h2 class="text-center">Información Médica de Emergencia</h2>
