--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card-body">
             <h5 class="card-title">Contactos de Emergencia</h5>
             <ul>
-                <li><strong>Daniel Balmore Duarte:</strong><br />(+503) 7150-7095</li>
+                <li><strong>Daniel Hernández Duarte:</strong><br />(+503) 7150-7095</li>
                 <li><strong>Noé Duarte:</strong><br />(+503) 7859-6964</li>
             </ul>
         </div>
@@ -113,10 +113,10 @@
         <div class="card-body">
             <h5 class="card-title">Medicamentos</h5>
             <ul>
-                <li><strong>Propanolol</strong> - 1 vez al día - 50mg</li>
-                <li><strong>Metformina</strong> - 1 vez al día - 50mg</li>
-                <li><strong>Atenolol</strong> - 1 vez al día - 100mg</li>
-                <li><strong>Hidrocloriticida</strong> - Mitad 1 vez al día - 100mg</li>
+		<li><strong>Amlodipina 5mg</strong> - 1 tableta 1 vez al día - 7:00 AM</li>
+		<li><strong>Hidrocloriticida 25mg</strong> - &#189; tableta 1 vez al día - 7:00 AM</li>                
+                <li><strong>Metformina 850mg</strong> - 1 tableta 1 vez al día - 6:00 PM</li>
+                <li><strong>Atenolol 100mg</strong> - 1 tableta 1 vez al día - 9:00 PM</li>                
             </ul>
         </div>
     </div>
