--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Información Médica</title>
+    <title>Información de Emergencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
         function enviarEmergencia() {
@@ -21,7 +21,7 @@
     </script>
 </head>
 <body class="container mt-4">
-    <h2 class="text-center">Información Médica de Emergencia</h2>
+    <h2 class="text-center">Información de Emergencia</h2>
     <div class="card mt-3">
         <div class="card-body">
             <h5>Datos Personales</h5>
