--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Información Médica de Emergencia</title>
+    <title>Información de Emergencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cargando Font Awesome para los iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -77,7 +77,7 @@
     </style>
 </head>
 <body class="container">
-    <h4>Información Médica de Emergencia</h4>
+    <h4>Información de Emergencia</h4>
     
     <div class="card mt-4">
         <div class="card-body">
